# gremlin

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  main.go  prof.txt
archive/: Makefile  go.mod  main.go
benches/: film.rs  geo.rs  shape.rs  spectrum.rs
crates/gremlin/: Cargo.toml
examples/: spheres.rs
experiments/: README.md
experiments/bvh/: bvh.go  main.go
experiments/rtow/: main.go  shape.go
pkg/camera/: camera.go  film.go  film_test.go  perspective.go  rtow.go
pkg/colorspace/: cie.go  cie_test.go  colorspace.go  colorspace_test.go  rgb.go  rgb_test.go
pkg/geo/: bounds.go  geo.go  matrix.go  matrix_test.go  ray.go  ray_test.go  transform.go  transform_test.go  unit.go  unit_test.go  vector.go  vector_test.go
pkg/material/: material.go
pkg/primitive/: primitive.go  sphere.go
pkg/render/: film.go  render.go  render_test.go  rtow.go  rtow_test.go
pkg/shape/: sphere.go  triangle.go
pkg/spectrum/: colors.go  discrete.go  discrete_test.go  distribution.go  energy.go  film.go  peak.go  predefined.go  sampled.go  sampled_test.go  sellmeier.go
pkg/util/: math.go  math_test.go
src/: camera.rs  color.rs  film.rs  geo.rs  integrator.rs  lib.rs  material.rs  math.rs  metric.rs  metrics.rs  prelude.rs  scene.rs  shape.rs  spectrum.rs
src/camera/: perspective.rs
src/colorspace/: xyz.rs
src/film/: buffer.rs  consts.rs  film.rs  iter.rs  pixel.rs  pixel_old.rs  rgb.rs  spectral.rs  xyz.rs
src/geo/: bounds.rs  coords.rs  matrix.rs  matrix_old.rs  mtx4.rs  point.rs  point3.rs  point_old.rs  ray.rs  ray_old.rs  unit.rs  unit_old.rs  vec3.rs  (+3 more)
(+33 files in other folders)
