[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

[features]
f32 = []

[dependencies]
approx = "0.5.1"
image = "0.24.4"
rand = "0.8.5"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "film"
harness = false

[[bench]]
name = "geo"
harness = false

[[bench]]
name = "shape"
harness = false

[[bench]]
name = "spectrum"
harness = false